--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "array-flatten": "^1.1.1",
     "baseline-browser-mapping": "^2.8.4",
     "batch": "^0.6.1",
+    "bcrypt": "^6.0.0",
     "binary-extensions": "^2.3.0",
     "body-parser": "^1.20.3",
     "bonjour-service": "^1.3.0",
