--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "eventemitter3": "^4.0.7",
     "events": "^3.3.0",
     "express": "^4.21.2",
+    "express-sessions": "^1.0.6",
     "fast-deep-equal": "^3.1.3",
     "fast-glob": "^3.3.3",
     "fast-uri": "^3.1.0",
@@ -200,6 +201,8 @@
     "param-case": "^3.0.4",
     "parseurl": "^1.3.3",
     "pascal-case": "^3.1.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "path-exists": "^4.0.0",
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
