--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "domhandler": "^4.3.1",
     "domutils": "^2.8.0",
     "dot-case": "^3.0.4",
+    "dotenv": "^17.2.2",
     "dunder-proto": "^1.0.1",
     "ee-first": "^1.1.1",
     "ejs": "^3.1.10",
@@ -101,6 +102,7 @@
     "eventemitter3": "^4.0.7",
     "events": "^3.3.0",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "express-sessions": "^1.0.6",
     "fast-deep-equal": "^3.1.3",
     "fast-glob": "^3.3.3",
