--- a/package.json
+++ b/package.json
@@ -204,6 +204,8 @@
     "parseurl": "^1.3.3",
     "pascal-case": "^3.1.2",
     "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "path-exists": "^4.0.0",
     "path-key": "^3.1.1",
